[gd_scene load_steps=5 format=3 uid="uid://kjrccbhl3oxl"]

[ext_resource type="Script" path="res://Scripts/UI/Health/health_oxygen.gd" id="1_1pq4c"]
[ext_resource type="FontFile" uid="uid://bu31gsw3wcg8t" path="res://Assets/fonts/SpaceMono-Regular.ttf" id="1_tdocd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vhfqr"]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hv3m"]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5

[node name="HealthOxygen" type="HBoxContainer"]
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.95
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -800.0
offset_right = -25.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 40
script = ExtResource("1_1pq4c")

[node name="ControlHealth" type="Control" parent="."]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="ControlHealth"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = 520.0
offset_right = 29.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("1_tdocd")
text = "Health"

[node name="HealthBar" type="ProgressBar" parent="ControlHealth"]
custom_minimum_size = Vector2(20, 250)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.95
anchor_right = 1.0
anchor_bottom = 0.95
offset_left = -20.0
offset_top = -250.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_vhfqr")
fill_mode = 3
show_percentage = false

[node name="ControlOxygen" type="Control" parent="."]
layout_mode = 2

[node name="OxygenLabel" type="Label" parent="ControlOxygen"]
layout_mode = 1
anchors_preset = -1
offset_left = -20.0
offset_top = 520.0
offset_right = 20.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("1_tdocd")
text = "O2"

[node name="OxygenBar" type="ProgressBar" parent="ControlOxygen"]
custom_minimum_size = Vector2(20, 250)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.95
anchor_right = 1.0
anchor_bottom = 0.95
offset_left = -20.0
offset_top = -250.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_7hv3m")
fill_mode = 3
show_percentage = false
